# waybar-earbud

./: CMakeLists.txt  README.md  install.sh
.github/workflows/: ci-release.yml
src/: audio.cpp  audio.hpp  common.hpp  fd.hpp  main.cpp
src/devices/airpods/: airpods.cpp  airpods.hpp
src/devices/sony/: sony.cpp  sony.hpp
tests/: expect_cli_failure.sh  test_audio.cpp  test_common.cpp
